# aerobus

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CPPLINT.cfg  Doxyfile  LICENSE  Makefile  README.md  cmake.sh  main_page.md  paper.bib  paper.md  çpaper.md
.devcontainer/: Dockerfile
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: Dockerfile  c-cpp.yml  documentation.yml  draft-pdf.yml  static.yml
docs/: _2home_2regisp_2code_2aerobus_2src_2aerobus_8h-example.html  _e_fraction_1_1val-example.html  _formulas.dvi  _formulas.tex  _formulas_dark.dvi  _formulas_dark.tex  _fraction_field-example.html  _p_i_fraction_1_1val-example.html  _quotient_ring-example.html  _r_e_a_d_m_e_8md.html  aerobus_1_1_continued_fraction-example.html  aerobus_8h.html  aerobus_8h__dep__incl.dot  aerobus_8h__incl.dot  aerobus_8h_source.html  annotated.html  benchmarks_8cpp.html  benchmarks_8cpp__incl.dot  classes.html  conceptaerobus_1_1_is_euclidean_domain.html  conceptaerobus_1_1_is_field.html  conceptaerobus_1_1_is_ring.html  concepts.html  custom__taylor_8cpp.html  custom__taylor_8cpp__incl.dot  dir_000000_000001.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_d28a4824dc47e487b107a5db32ef43c4_dep.dot  examples.html  examples_2compensated_horner_8cpp-example.html  examples_2continued_fractions_8cpp-example.html  examples_2custom_taylor_8cpp-example.html  examples_2fp16_8cu-example.html  examples_2hermite_8cpp-example.html  examples_2make_polynomial_8cpp-example.html  examples_2modular_arithmetic_8cpp-example.html  examples_2polynomials_over_finite_field_8cpp-example.html  examples_8h.html  examples_8h_source.html  (+4072 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_a.js  concepts_0.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  enums_0.js  enumvalues_0.js  files_0.js  files_2.js  (+45 more)
examples/: a.out  compensated_horner.cpp  continued_fractions.cpp  custom_taylor.cpp  fp16.cu  generate_comp_horner.sh  hermite.cpp  libm.cu  libm_hip.cpp  make_polynomial.cpp  modular_arithmetic.cpp  nvidia_bug_.cu  polynomials_over_finite_field.cpp  quotient_ring.cpp  utilities.h
examples/plots/: compensated_horner.gp  double_horner_vs_float_comp_horner.gp
imports/: conwaypolynomials.h  conwaypolynomials.txt
paper/: arxiv.sty  main.bib  main.tex
src/: .gitignore  Makefile  aad.h  aerobus.h  benchmarks.cpp  common_functions.h  examples.h  fraction_field.h  generating_functions.h  i32.h  i64.h  lib.h  lib_tests.cpp  libm_tests.cpp  log.txt  main.cpp  paper.md  polynomial.h  polynomials.h  polynomials.sln  polynomials.vcxproj  polynomials.vcxproj.filters  templight.blacklist  type_list.h  utilities.h  zpz.h
src/paper/: paper.md
src/sollya/: script.sollya
test_cuda/: kernel.cu
